--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jenkins.blueocean</groupId>
-    <artifactId>test-ssh-server</artifactId>
+    <artifactId>blueocean-test-ssh-server</artifactId>
     <version>1.3.0-beta-1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
