--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,10 @@
                                     <pattern>com.jcraft</pattern>
                                     <shadedPattern>io.jenkins.blueocean.test.ssh.com.jcraft</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>org.eclipse.jgit</pattern>
+                                    <shadedPattern>io.jenkins.blueocean.test.ssh.org.eclipse.jgit</shadedPattern>
+                                </relocation>
                             </relocations>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
@@ -156,6 +160,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>4.8.0.201706111038-r</version>
         </dependency>
         <dependency>
             <groupId>com.jcraft</groupId>
